# Final-Project-1-IF2010-Object-Oriented-Programming

./: .gitignore  CMakeLists.txt  README.md  nimonspoli_save.txt  sdsd
config/: aksi.txt  misc.txt  property.txt  railroad.txt  special.txt  tax.txt  utility.txt
config/20/: aksi.txt  board.txt  property.txt
config/24/: aksi.txt  board.txt  property.txt
config/28/: aksi.txt  board.txt  property.txt
config/32/: aksi.txt  board.txt  property.txt
config/36/: aksi.txt  board.txt  property.txt
config/40/: aksi.txt  board.txt  property.txt
config/44/: aksi.txt  board.txt  property.txt
config/48/: aksi.txt  board.txt  property.txt
config/52/: aksi.txt  board.txt  property.txt
config/56/: aksi.txt  board.txt  property.txt
config/60/: aksi.txt  board.txt  property.txt
docs/: BonusAnalysis.md
include/controllers/: ComputerController.hpp  HumanController.hpp  PlayerController.hpp
include/core/: Bank.hpp  FestivalEffectSnapshot.hpp  FestivalManager.hpp  IGameRepository.hpp  TextFileRepository.hpp
include/models/: Money.hpp  Player.hpp
include/ui/: AppScreen.hpp  AssetManager.hpp  CLIInput.hpp  CLIView.hpp  ConsoleInput.hpp  GUIInput.hpp  GUIView.hpp  IGameInput.hpp  IGameView.hpp  RaylibCompat.hpp  UiDtos.hpp
include/utils/: Enums.hpp  GameUtils.hpp  Structs.hpp  Types.hpp
src/: main.cpp
src/app/: GameApp.cpp
src/controllers/: ComputerController.cpp  HumanController.cpp
src/core/: Bank.cpp  FestivalEffectSnapshot.cpp  FestivalManager.cpp  TextFileRepository.cpp
src/manager/: AuctionManager.cpp  BankruptcyManager.cpp  EventBus.cpp  TurnManager.cpp
src/models/: Player.cpp
src/tile/: ActionTile.cpp  ChanceTile.cpp  GoTile.cpp  (+14 more)
(+116 files in other folders)
